@@ -661,6 +661,7 @@ LISPSYM(probe_file,"PROBE-FILE",lisp)
 LISPSYM(probe_directory,"PROBE-DIRECTORY",ext)
 LISPSYM(delete_file,"DELETE-FILE",lisp)
 LISPSYM(rename_file,"RENAME-FILE",lisp)
+LISPSYM(file_error,"FILE-ERROR",lisp)
 LISPSYM(open,"OPEN",lisp)
 LISPSYM(directory,"DIRECTORY",lisp)
 LISPSYM(cd,"CD",ext)
